# Hardware-CPP-GUI

./: CMakeLists.txt  CMakeSettings.json  Main.cpp  OSMisc.h  ReadMe.txt
